--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,55 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.forheader{
+
+  background-color: black;
+  width: auto;
+  height: 200px;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#text{
+
+  padding-top: 100px;
+  padding-bottom: 100px;
+  padding-left: 900px;
+  color: white;
+  font-size: 40px;
+  font-family: Arial, Helvetica, sans-serif;
+
+}
+
+.box{
+  padding-top: 50px;
+  padding-left: 900px;
+}
+
+.label{
+  font-weight: bold;
+}
+
+.button{
+
+  width: 150px;
+  height: 100px;
+  position: center;
+}
+
+#label{
+  width: 650px;
+  height: 500px;
+  position: center;
+  font-size: 20px;
+  background-color:#00c98e;
+  border-radius: 20px; 
+}
+
+#labeltext{
+
+  width: 150px;
+  height: 70px;
+  background-color: black;
+  color: white;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding-top: 50px;
+
 }
