--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
 
 }
 
+
+
 #text{
 
   padding-top: 100px;
@@ -22,34 +24,18 @@
   padding-left: 900px;
 }
 
-.label{
-  font-weight: bold;
-}
+.scroll-bar{
 
-.button{
+  height: 600px;
+  width: 300px;
+  border: 1px solid black;
+  overflow: auto;
+  margin-top: 20px;
+  background-color: green;
 
-  width: 150px;
-  height: 100px;
-  position: center;
 }
 
 #label{
-  width: 650px;
-  height: 500px;
-  position: center;
-  font-size: 20px;
-  background-color:#00c98e;
-  border-radius: 20px; 
-}
-
-#labeltext{
-
-  width: 150px;
-  height: 70px;
-  background-color: black;
-  color: white;
-  font-size: 20px;
-  font-family: Arial, Helvetica, sans-serif;
-  padding-top: 50px;
-
+  font-weight: bold;
+  margin-right: 5px;
 }
